// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms | Pill Basic Pill 1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c7 {
  stroke: #6E6E69;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  background: #FFFFFF;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.21);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding: 0 4px;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 c2 c3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        <span
          className="c5"
        >
          1234
        </span>
      </span>
    </button>
    <button
      className="NormalizedButton__Button-ey7f5x-0 c2 c3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            className="c7"
            d="m 1 1 l 22 22 m -22 0 l 22 -22"
            strokeWidth={2}
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;

exports[`Storyshots Atoms | Pill Pill with colored bar 1`] = `
.c6 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 8px;
  height: 8px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c7 {
  stroke: #6E6E69;
}

.c1 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  background: #FFFFFF;
  box-shadow: 0 1px 4px 0 rgba(0,0,0,0.21);
  border-left: 4px solid #282823;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 0;
  background-color: transparent;
  color: #282823;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c2,
.c2[type='button'],
.c2[type='reset'],
.c2[type='submit'] {
  -webkit-appearance: button;
}

.c2::-moz-focus-inner,
.c2[type='button']::-moz-focus-inner,
.c2[type='reset']::-moz-focus-inner,
.c2[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c2:-moz-focusring,
.c2[type='button']:-moz-focusring,
.c2[type='reset']:-moz-focusring,
.c2[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding: 0 4px;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    <button
      className="NormalizedButton__Button-ey7f5x-0 c2 c3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        <span
          className="c5"
        >
          1234
        </span>
      </span>
    </button>
    <button
      className="NormalizedButton__Button-ey7f5x-0 c2 c3"
      onClick={[Function]}
      type="button"
    >
      <span
        className="c4"
      >
        <svg
          aria-hidden="true"
          className="c6"
          focusable="false"
          preserveAspectRatio="xMidYMid meet"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            className="c7"
            d="m 1 1 l 22 22 m -22 0 l 22 -22"
            strokeWidth={2}
          />
        </svg>
      </span>
    </button>
  </span>
</div>
`;
